--- a/app/src/main/res/layout/activity_generated_reports.xml
+++ b/app/src/main/res/layout/activity_generated_reports.xml
@@ -23,7 +23,7 @@
             android:padding="0dp" />
 
         <android.support.v7.widget.RecyclerView
-            android:id="@+id/rv_downloaded"
+            android:id="@+id/rv_generated"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             >
