--- a/app/src/main/res/layout/checklist_layout.xml
+++ b/app/src/main/res/layout/checklist_layout.xml
@@ -1,70 +1,80 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/tools"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/headingLayout"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="5dp"
-    android:padding="2dp"
-    app:ignore="NamespaceTypo"
-    card_view:cardCornerRadius="5dp"
-    card_view:cardElevation="2dp">
+    android:orientation="vertical">
 
-    <android.support.constraint.ConstraintLayout
-        android:id="@+id/layoutLinear"
+    <RelativeLayout
+        android:id="@+id/view_background"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#fff">
+
+        <ImageView
+            android:id="@+id/delete_icon"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="10dp"
+            android:src="@drawable/checklist" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="10dp"
+            android:layout_toLeftOf="@id/delete_icon"
+            android:text="delete"
+            android:textColor="#000"
+            android:textSize="13dp" />
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/view_foreground"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:orientation="vertical"
-        android:padding="5dp"
-        android:visibility="visible">
+        android:background="@android:color/white"
+        android:padding="10dp">
 
         <ImageView
             android:id="@+id/ivFileImage"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp"
-            android:src="@drawable/checklist"
-            card_view:layout_constraintBottom_toBottomOf="parent"
-            card_view:layout_constraintStart_toStartOf="parent"
-            card_view:layout_constraintTop_toTopOf="parent" />
+            android:layout_width="75dp"
+            android:layout_height="75dp"
+            android:src="@drawable/engineer"
+            android:layout_marginRight="10dp"
+            android:scaleType="centerCrop" />
 
         <TextView
             android:id="@+id/tvFileName"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
-            android:text="filename"
-            card_view:layout_constraintEnd_toEndOf="parent"
-            card_view:layout_constraintStart_toEndOf="@+id/ivFileImage"
-            card_view:layout_constraintTop_toTopOf="@+id/ivFileImage" />
+            android:layout_toRightOf="@id/ivFileImage"
+            android:ellipsize="end"
+            android:fontFamily="sans-serif-medium"
+            android:maxLines="1"
+            android:textColor="#563"
+            android:textSize="17dp" />
+
+        <TextView
+            android:id="@+id/tvDateTime"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/tvFileName"
+            android:layout_marginTop="5dp"
+            android:layout_toRightOf="@id/ivFileImage"
+            android:textColor="#678"
+            android:textSize="12dp" />
 
         <TextView
             android:id="@+id/textView13"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
-            android:text="Checklist"
-            android:textColor="?attr/colorButtonNormal"
-            android:textSize="12sp"
-            android:textStyle="italic"
-            card_view:layout_constraintEnd_toEndOf="parent"
-            card_view:layout_constraintTop_toTopOf="parent" />
+            android:layout_alignParentBottom="true"
+            android:layout_toRightOf="@id/ivFileImage"
+            android:textColor="@color/colorAccent"
+            android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/tvdatetime"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
-            android:text="TextView"
-            android:textSize="12sp"
-            card_view:layout_constraintStart_toStartOf="@+id/tvFileName"
-            card_view:layout_constraintTop_toBottomOf="@+id/tvFileName" />
-    </android.support.constraint.ConstraintLayout>
-</android.support.v7.widget.CardView>
+    </RelativeLayout>
+</FrameLayout>
